<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/zalando_suits"
    tools:context="com.example.yosef.zalandosinglepage.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:contentDescription="@string/zalando_logo"
            android:src="@drawable/zalando" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="80dp"
            android:text="@string/zalando_description"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/zalandoDescription"
            android:textStyle="bold|italic" />

        <View
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/contact_us"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/ContactTextview"
                android:autoLink="phone"
                android:drawableLeft="@drawable/ic_contact_phone_black_18dp"
                android:drawableStart="@drawable/ic_contact_phone_black_18dp"
                android:text="@string/zalando_phone" />

            <TextView
                style="@style/ContactTextview"
                android:autoLink="email"
                android:drawableLeft="@drawable/ic_contact_mail_black_18dp"
                android:drawableStart="@drawable/ic_contact_mail_black_18dp"
                android:text="@string/zalando_mail" />

            <TextView
                style="@style/ContactTextview"
                android:layout_marginBottom="20dp"
                android:autoLink="web"
                android:drawableLeft="@drawable/ic_web_black_18dp"
                android:drawableStart="@drawable/ic_web_black_18dp"
                android:text="@string/zalando_web" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
